--- a/catalog/static/main.scss
+++ b/catalog/static/main.scss
@@ -1,5 +1,6 @@
-$primary: #0c2b45;
+$primary: rgb(46, 185, 255);
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "./styles.scss";
+//
 //
