--- a/catalog/templates/catalog/search_result.html
+++ b/catalog/templates/catalog/search_result.html
@@ -1,8 +1,14 @@
 {% extends 'base_generic.html' %}
 
+{% block heading %}
+Search Results
+{% endblock heading %}
+
 {% block content %}
 
-<h1 class="display-4 border-bottom border-dark pb-2 mb-3">Search Results</h1>
+<!-- <h1 class="display-4 border-bottom border-dark pb-2 mb-3">Search Results</h1> -->
+
+
 
 <div class="row">
   <div class="col-md-6">
