--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -7,7 +7,7 @@ Home Page
 {% block banner %}
 <div class="jumbotron mt-5 mt-sm-2">
   <div class="my-list">
-    <h1 class="display-4">Welcome to Hung's Library!</h1>
+    <h1 class="display-4">Welcome to <br>Hung's Library!</h1>
     <hr class="my-4">
 
     <table class="table table-hover">
