--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -1,8 +1,10 @@
 {% extends 'base_generic.html' %}
 
-{% block content %}
+{% block heading %}
+Available Books ({{ object_list.count }})
+{% endblock heading %}
 
-<h1>Available Books ({{ object_list.count }})</h1>
+{% block content %}
 
 <hr />
 
@@ -14,10 +16,10 @@
 
     {% for book, copies in book_list %}
 
-    <div class="card ">
+    <div class="card">
       <div class="card-header bg-dark" id="headingOne">
         <h2 class="mb-0">
-          <button class="btn btn-block text-left font-weight-bold text-my" type="button" data-toggle="collapse"
+          <button class="btn btn-block text-left font-weight-bold text-accor" type="button" data-toggle="collapse"
             data-target="#book-{{book.id}}" aria-expanded="true" aria-controls="book-{{book.id}}">
             {{ book }}
           </button>
