--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -30,7 +30,7 @@
 <h5 class="mb-3">Books by author</h5>
 
 <table class="table">
-  <thead class="thead-dark">
+  <thead class="bg-green-2">
     <tr>
       <th scope="col">#</th>
       <th scope="col">Title</th>
