--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -10,7 +10,7 @@ All Authors {% endblock title %}({{ num_of_authors }})
 
 
   {% if perms.catalog.add_author %}
-  <a class="btn btn-primary btn-center" href="{% url 'author_create' %}">Create Author</a>
+  <a class="btn btn-brown-1 btn-center" href="{% url 'author_create' %}">Create Author</a>
   {% endif %}
 
 </div>
@@ -18,8 +18,8 @@ All Authors {% endblock title %}({{ num_of_authors }})
 <hr>
 
 <div class="my-list">
-  <table class="table table-light table-borderless table-hover">
-    <thead class="thead-dark">
+  <table class="table table-green-1 table-borderless table-hover">
+    <thead class="bg-green-2">
       <tr>
         <th scope="col">Name</th>
         <th scope="col"></th>
