--- a/catalog/templates/catalog/search_result.html
+++ b/catalog/templates/catalog/search_result.html
@@ -13,7 +13,7 @@ Search Results
 <div class="row">
   <div class="col-md-6">
     <table class="table table-borderless">
-      <thead class="thead-dark">
+      <thead class="bg-green-2">
         <tr>
           <th scope="col">Books ({{ books.count }})</th>
         </tr>
@@ -34,7 +34,7 @@ Search Results
 
   <div class="col-md-6">
     <table class="table table-borderless">
-      <thead class="thead-dark">
+      <thead class="bg-green-2">
         <tr>
           <th scope="col">Authors ({{ authors.count }})</th>
         </tr>
