--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -11,7 +11,7 @@ Home Page
     <hr class="my-4">
 
     <table class="table table-hover">
-      <thead class="thead-dark">
+      <thead class="bg-green-2">
         <tr>
           <th colspan="2" class="text-center">Here we have</th>
         </tr>
