--- a/catalog/templates/catalog/all_borrowed_books.html
+++ b/catalog/templates/catalog/all_borrowed_books.html
@@ -10,7 +10,7 @@ All Borrowed Books
 
 {% if object_list %}
 <table class="table table-borderless">
-  <thead class="thead-dark">
+  <thead class="bg-green-2">
     <tr>
       <th scope="col">Book</th>
       <th scope="col">Borrower</th>
@@ -24,7 +24,7 @@ All Borrowed Books
     <td><a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a></td>
     <td>{{ bookinst.borrower }}</td>
     <td class="{% if bookinst.is_overdue %}text-danger{% endif %}">{{ bookinst.due_back }}</td>
-    <td><a class="btn btn-primary" href="{% url 'renew-book-librarian' bookinst.id %}">Renew</a></td>
+    <td><a class="btn btn-brown-1" href="{% url 'renew-book-librarian' bookinst.id %}">Renew</a></td>
   </tr>
   {% endfor %}
 </table>
