--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -17,7 +17,7 @@ Available Books ({{ object_list.count }})
     {% for book, copies in book_list %}
 
     <div class="card">
-      <div class="card-header bg-dark" id="headingOne">
+      <div class="card-header bg-green-1" id="headingOne">
         <h2 class="mb-0">
           <button class="btn btn-block text-left font-weight-bold text-accor" type="button" data-toggle="collapse"
             data-target="#book-{{book.id}}" aria-expanded="true" aria-controls="book-{{book.id}}">
@@ -40,7 +40,7 @@ Available Books ({{ object_list.count }})
 
               {% if user.is_authenticated %}
               <a href="{% url 'borrow_a_book' copy_.pk %}">
-                <span class="btn btn-primary ml-2">Borrow</span>
+                <span class="btn btn-brown-1 ml-2">Borrow</span>
               </a>
               {% endif %}
             </li>
