--- a/catalog/templates/catalog/book_renew_librarian.html
+++ b/catalog/templates/catalog/book_renew_librarian.html
@@ -12,7 +12,7 @@
     <table>
       {{ form | crispy }}
     </table>
-    <input class="btn btn-primary" type="submit" value="Renew">
+    <input class="btn btn-brown-1" type="submit" value="Renew">
   </form>
 
   {% endblock content %}
