--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -53,7 +53,11 @@
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#libNav" aria-controls="libNav"
         aria-expanded="false" aria-label="Toggle Navigation">
-        <span class="navbar-toggler-icon"></span>
+        <svg width="1.2em" height="1.2em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+        </svg>
       </button>
 
       <div class="collapse navbar-collapse " id="libNav">
