Dung Login, LogoutView cua minh, restyle a bit, email_reset_pw

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,8 +1,12 @@
 {% extends 'base_generic.html' %}
 {% load crispy_forms_tags %}
 
-{% block content %}
+{% block heading %}
+Login
+{% endblock heading %}
 
+{% block content %}
+<hr>
 {% if next %}
 
 {% if user.is_authenticated %}
