--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -38,15 +38,15 @@
           <div class="dropdown-menu" aria-labelledby="userDropdown">
             <a class="dropdown-item" href="{% url 'my-borrowed' %}">My books</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'logout' %}?next={{request.path}}">Logout</a>
+            <a class="dropdown-item" href="{% url 'users:my-logout' %}">Logout</a>
           </div>
         </li>
 
         {% else %}
 
-        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}?next={{request.path}}">Login</a>
+        <li class="nav-item"><a class="nav-link" href="{% url 'users:my-login' %}">Login</a>
         </li>
-        <li class="nav-item"> <a class="nav-link" href="{% url 'register' %}">Register</a></li>
+        <li class="nav-item"> <a class="nav-link" href="{% url 'users:register' %}">Register</a></li>
 
         {% endif %}
       </ul>
@@ -86,7 +86,7 @@
           {% csrf_token %}
           <input class="form-control mr-sm-2" type="search" placeholder="vd. Harry Potter" aria-label="Search" name="q"
             id="search-bar">
-          <button class="btn btn-green-1 my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-brown-3 my-2 my-sm-0" type="submit">Search</button>
         </form>
 
       </div>
@@ -139,15 +139,16 @@
       {% endfor %}
       {% endif %}
       <!------ END FORM ERRORS SECTION ------>
+      <!-- HEADING -->
       <h1 class="tieu-de-page">
         {% block heading %}
         {% endblock heading %}
       </h1>
-
+      <!-- CONTENT -->
       {% block content %}
       {% endblock content %}
 
-      <!-- ---------- PAGINATION --------------->
+      <!------------ PAGINATION --------------->
       {% if is_paginated %}
       <nav aria-label="Pages" class="mt-3">
         <ul class="pagination justify-content-center">
