--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,16 +1,23 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_tags %}
+
+{% block heading %}
+Reset Password
+{% endblock heading %}
 
 {% block content %}
 
-<form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-  {{ form.email.errors }}
-  {% endif %}
 
-  <p>{{ form.email }}</p>
-  <input type="submit" class="btn btn-default btn-lg" value="Send">
+<hr>
+<div class="my-list">
+  <form action="" method="post">
+    {% csrf_token %}
+    {{ form | crispy }}
 
-</form>
+    <input type="submit" class="btn btn-green-2 btn-block mt-4" value="Send">
+
+  </form>
+</div>
+
 
 {% endblock content %}
